Ready to start CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<p>Bridget Cromien</p>
+<html>
+    <head></head>
+    <title>Knitting Pattern for Slouchy Hat</title>
+    <body>
+        <h1>Slouchy Hat Pattern</h1>
+        <div>
+        <img class="hat-pic" src="images/12299013_1658344121117828_1845413775_n(1).jpg">
+        <img class="hat-pic" src="images/12331403_960422500709513_382291060_n.jpg">
+        <img class='hat-pic' src='images/12407217_1060722033972413_1862408174_n.jpg'>
+        <img class='hat-pic' src='images/12424483_507278982778109_2027875485_n.jpg'>
+        </div>
+        <div class="materials">
+            <h2 class="label">Materials Needed</h2>
+            <ul>
+                <li>1 skein of worsted weight yarn</li>
+                <li>US size 4 circular needles</li>
+                <li>US size 5 circular needles</li>
+                <li>Stitch markers</li>
+            </ul>
+        </div>
+        <div class="gauge">
+            <h2 class="label">Gauge</h2>
+            <p>10 stitches of 10 rows should result in 2x2'' swatch. If your gauge is off, adjust needle size to ensure fit.</p>
+        </div>
+        <div class="pattern">
+            <h2 class="label">Pattern</h2>
+            <h3>Rim</h3>
+            <p>Cast on 44 stitches.<br>K1 P1 until the end of the row and place marker.<br>K1 P1 until work measures 2 inches long.</p>
+            <h3>Body</h3>
+            <p>Switch to larger needles.<br>Row 1: Knit all stitches.<br>Row 2: K1 P1<br> Repeat the last 2 rows until piece measures 6in long (longer if you want more slouch or shorter if you want it more fitted). </p>
+            <h3>Top</h3>
+            <p>Place stitch marker after every 8 stitches.<br>Row 1: Knit to 1 stitch before the marker and K2.<br>Row 2: K1 P1<br>When only 5 stitches remain, use tapestry needle to close and tie off. </p>
+        </div>
+    </body>
+    <foot>&copy Bridget</foot>
+</html>
