--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <head></head>
-    <title>Knitting Pattern for Slouchy Hat</title>
+    <head>
+        <title>Knitting Pattern for Slouchy Hat</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
+    
     <body>
         <h1>Slouchy Hat Pattern</h1>
         <div>
