--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <html>
     <head>
-        <title>Knitting Pattern for Slouchy Hat</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title>Slouchy Hat Knitting Pattern</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
     </head>
     
     <body>
-        <h1>Slouchy Hat Pattern</h1>
+        <h1>Slouchy Hat Knitting Pattern</h1>
         <div>
         <img class="hat-pic" src="images/12299013_1658344121117828_1845413775_n(1).jpg">
         <img class="hat-pic" src="images/12331403_960422500709513_382291060_n.jpg">
         <img class='hat-pic' src='images/12407217_1060722033972413_1862408174_n.jpg'>
         <img class='hat-pic' src='images/12424483_507278982778109_2027875485_n.jpg'>
+        </div>
+        <div>
+            <p>Who doesn't love the perfect slouchy hat for a bad hair day?! This simple pattern is beginner-friendly, knit in the round and slightly textured with a broken rib stitch. No matter how many hats I make, I just keep coming back to this old favorite. :)</p>
         </div>
         <div class="materials">
             <h2 class="label">Materials Needed</h2>
@@ -27,11 +30,11 @@
         </div>
         <div class="pattern">
             <h2 class="label">Pattern</h2>
-            <h3>Rim</h3>
+            <h3>Band</h3>
             <p>Cast on 44 stitches.<br>K1 P1 until the end of the row and place marker.<br>K1 P1 until work measures 2 inches long.</p>
             <h3>Body</h3>
-            <p>Switch to larger needles.<br>Row 1: Knit all stitches.<br>Row 2: K1 P1<br> Repeat the last 2 rows until piece measures 6in long (longer if you want more slouch or shorter if you want it more fitted). </p>
-            <h3>Top</h3>
+            <p>Switch to larger needles.<br>Row 1: Knit all stitches.<br>Row 2: K1 P1<br> Repeat the last 2 rows until piece measures 6in long<br> (Knit it longer if you want more slouch or shorter if you want it more fitted). </p>
+            <h3>Decrease for the Top</h3>
             <p>Place stitch marker after every 8 stitches.<br>Row 1: Knit to 1 stitch before the marker and K2.<br>Row 2: K1 P1<br>When only 5 stitches remain, use tapestry needle to close and tie off. </p>
         </div>
     </body>
