getting there finally

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     
     <body>
-        <h1>Slouchy Hat Knitting Pattern</h1>
+        <h1>Slouchy Hat | Knitting Pattern</h1>
+        <a href="#contact"><h3>by Bridget Cromien</h3></a>
         <div>
         <img class="hat-pic" src="images/12299013_1658344121117828_1845413775_n(1).jpg">
         <img class="hat-pic" src="images/12331403_960422500709513_382291060_n.jpg">
@@ -38,5 +39,8 @@
             <p>Place stitch marker after every 8 stitches.<br>Row 1: Knit to 1 stitch before the marker and K2.<br>Row 2: K1 P1<br>When only 5 stitches remain, use tapestry needle to close and tie off. </p>
         </div>
     </body>
-    <foot>&copy Bridget</foot>
+    <foot>
+        <p id="contact">Bridget Cromien | bcromien@gmail.com | St.Louis, MO</p>
+        <p>&copy Bridget Cromien</p>
+    </foot>
 </html>
