--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Slouchy Hat Knitting Pattern</title>
@@ -9,9 +10,9 @@
         <a href="#contact"><h3>by Bridget Cromien</h3></a>
         <div>
         <img class="hat-pic" src="images/12299013_1658344121117828_1845413775_n(1).jpg">
-        <img class="hat-pic" src="images/12331403_960422500709513_382291060_n.jpg">
-        <img class='hat-pic' src='images/12407217_1060722033972413_1862408174_n.jpg'>
         <img class='hat-pic' src='images/12424483_507278982778109_2027875485_n.jpg'>
+        <img class='hat-pic' src='images/12407217_1060722033972413_1862408174_n.jpg'>
+        <img class="hat-pic" src="images/12331403_960422500709513_382291060_n.jpg">
         </div>
         <div>
             <p>Who doesn't love the perfect slouchy hat for a bad hair day?! This simple pattern is beginner-friendly, knit in the round and slightly textured with a broken rib stitch. No matter how many hats I make, I just keep coming back to this old favorite. :)</p>
@@ -20,23 +21,25 @@
             <h2 class="label">Materials Needed</h2>
             <ul>
                 <li>1 skein of worsted weight yarn</li>
-                <li>US size 4 circular needles</li>
-                <li>US size 5 circular needles</li>
+                <li>US size 5 circular needles(16in)</li>
+                <li>US size 7 circular needles(16in)</li>
+                <li>set of US size 7 DPNs</li>
                 <li>Stitch markers</li>
+                <li>Tapestry Needle</li>
             </ul>
         </div>
         <div class="gauge">
             <h2 class="label">Gauge</h2>
-            <p>10 stitches of 10 rows should result in 2x2'' swatch. If your gauge is off, adjust needle size to ensure fit.</p>
+            <p>5 stitches per inch in 1x1 rib stitch.</p>
         </div>
         <div class="pattern">
             <h2 class="label">Pattern</h2>
             <h3>Band</h3>
-            <p>Cast on 44 stitches.<br>K1 P1 until the end of the row and place marker.<br>K1 P1 until work measures 2 inches long.</p>
+            <p>Cast on 96 stitches.<br>K1 P1 until the end of the row and place marker.<br>K1 P1 until work measures 2 inches long.</p>
             <h3>Body</h3>
-            <p>Switch to larger needles.<br>Row 1: Knit all stitches.<br>Row 2: K1 P1<br> Repeat the last 2 rows until piece measures 6in long<br> (Knit it longer if you want more slouch or shorter if you want it more fitted). </p>
+            <p>Switch to larger needles.<br>Row 1: Knit all stitches.<br>Row 2: K1 P1<br> Repeat the last 2 rows until piece measures 7in from the cast on edge.<br> (Knit it longer if you want more slouch or shorter if you want it more fitted). </p>
             <h3>Decrease for the Top</h3>
-            <p>Place stitch marker after every 8 stitches.<br>Row 1: Knit to 1 stitch before the marker and K2.<br>Row 2: K1 P1<br>When only 5 stitches remain, use tapestry needle to close and tie off. </p>
+            <p>Place stitch marker after every 14 stitches.<br>Row 1: Knit to the marker and Sl1 K1 and PSSO. Repeat until the end of row.<br>Row 2: K1 P1<br>When only 5 stitches remain, use tapestry needle to close and tie off.<br> When stiches become too few to knit comfortably with circular needles, switch to DPN. </p>
         </div>
     </body>
     <foot>
